# Scrabbled-Words-Game

./: CMakeLists.txt  README.MD  main.cpp  setup.bat
src/Constant/: word_bank.txt
src/Core/: Board.cpp  Board.hpp  Dictionary.cpp  Dictionary.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Tile.cpp  Tile.hpp
src/UI/: GameRenderer.cpp  GameRenderer.hpp
